tests/sqllogic/sdb/pg/simple/file_tables.test
hash-threshold 100
control substitution on

statement count 10000
COPY (
  SELECT 
    iq,
    'salary '::text || salary::text || ' dallar'::text as salary, 
    'i do nothing and gain money' as fact
  FROM
    generate_series(1, 100) as clickclack(iq),
    generate_series(1, 100) as serenedb(salary)
  ORDER BY iq, serenedb.salary
) TO '/tmp/${__DATABASE__}_vedernikoff_company.parquet';


statement ok
CREATE TABLE vedernikoff_company(
  iq INT8,
  salary TEXT,
  fact TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);


# all filters are supposed to be pushdowned — no FilterNode in the plan
query
EXPLAIN
SELECT *
FROM
  vedernikoff_company as v1,
  vedernikoff_company as v2,
  vedernikoff_company as v3
WHERE 
  v1.iq > 90 AND v1.iq < 100 AND v1.iq != 95 AND v1.salary IS NOT NULL
  AND v2.iq = 90 AND v2.salary IS NULL
  AND v3.iq >= 90 AND v3.iq <= 100 AND v3.iq NOT IN (99, 95, 97)
  AND v3.fact LIKE '%gain%' AND (v1.iq = 23 OR v2.iq = 54);
----
QUERY PLAN
┌───────────────────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             iq            │
│           salary          │
│            fact           │
│             iq            │
│           salary          │
│            fact           │
│             iq            │
│           salary          │
│            fact           │
│                           │
│      ~4,000,000 rows      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       CROSS_PRODUCT       ├───────────────────────────────────────────┐
└─────────────┬─────────────┘                                           │
┌─────────────┴─────────────┐                             ┌─────────────┴─────────────┐
│     BLOCKWISE_NL_JOIN     │                             │        READ_PARQUET       │
│    ────────────────────   │                             │    ────────────────────   │
│      Join Type: INNER     │                             │         Function:         │
│      Condition: false     │                             │        READ_PARQUET       │
│                           │                             │                           │
│                           │                             │        Projections:       │
│                           │                             │             iq            │
│                           │                             │            fact           │
│                           ├──────────────┐              │           salary          │
│                           │              │              │                           │
│                           │              │              │          Filters:         │
│                           │              │              │ (iq >= 90) AND (iq <= 100)│
│                           │              │              │   AND (iq NOT IN (99, 95, │
│                           │              │              │            97))           │
│                           │              │              │   contains(fact, 'gain')  │
│                           │              │              │                           │
│        ~2,000 rows        │              │              │        ~2,000 rows        │
└─────────────┬─────────────┘              │              └───────────────────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│        READ_PARQUET       ││        EMPTY_RESULT       │
│    ────────────────────   ││                           │
│         Function:         ││                           │
│        READ_PARQUET       ││                           │
│                           ││                           │
│        Projections:       ││                           │
│             iq            ││                           │
│           salary          ││                           │
│            fact           ││                           │
│                           ││                           │
│          Filters:         ││                           │
│  (iq != 95) AND (iq > 90) ││                           │
│       AND (iq < 100)      ││                           │
│                           ││                           │
│        ~2,000 rows        ││                           │
└───────────────────────────┘└───────────────────────────┘

query
SELECT * FROM vedernikoff_company;
----
30003 values hashing to 017114532d4bd6a929a5d709e1e8d90f


query
SELECT fact, salary FROM vedernikoff_company OFFSET 50 LIMIT 20;
----
fact	salary
i do nothing and gain money	salary 51 dallar
i do nothing and gain money	salary 52 dallar
i do nothing and gain money	salary 53 dallar
i do nothing and gain money	salary 54 dallar
i do nothing and gain money	salary 55 dallar
i do nothing and gain money	salary 56 dallar
i do nothing and gain money	salary 57 dallar
i do nothing and gain money	salary 58 dallar
i do nothing and gain money	salary 59 dallar
i do nothing and gain money	salary 60 dallar
i do nothing and gain money	salary 61 dallar
i do nothing and gain money	salary 62 dallar
i do nothing and gain money	salary 63 dallar
i do nothing and gain money	salary 64 dallar
i do nothing and gain money	salary 65 dallar
i do nothing and gain money	salary 66 dallar
i do nothing and gain money	salary 67 dallar
i do nothing and gain money	salary 68 dallar
i do nothing and gain money	salary 69 dallar
i do nothing and gain money	salary 70 dallar


query
SELECT salary, fact FROM vedernikoff_company ORDER BY 1 DESC LIMIT 1;
----
salary	fact
salary 99 dallar	i do nothing and gain money


query
SELECT *
FROM
  vedernikoff_company as v1,
  vedernikoff_company as v2
WHERE v1.iq > 90 AND v2.iq > 90 AND v1.iq != 98;
----
5400006 values hashing to 497bc5d96ddaa8438d0571265649bb89


query
SELECT iq FROM vedernikoff_company WHERE iq = 7 AND salary = 'salary 7 dallar';
----
iq
7


query
SELECT salary, iq FROM vedernikoff_company WHERE iq = 7 AND salary = 'salary 7 dallar';
----
salary	iq
salary 7 dallar	7


query
SELECT salary FROM vedernikoff_company WHERE iq = 42 AND salary = 'salary 42 dallar';
----
salary
salary 42 dallar


query
SELECT COUNT(iq) FROM vedernikoff_company;
----
count
10000


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq IS NULL;
----
count
0


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq IS NOT NULL;
----
count
10000


query
SELECT COUNT(*) FROM vedernikoff_company WHERE salary IS NULL;
----
count
0


query
SELECT COUNT(*) FROM vedernikoff_company WHERE salary IS NOT NULL;
----
count
10000


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq > 95;
----
count
500


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq < 5;
----
count
400


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq >= 99;
----
count
200


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq <= 2;
----
count
200


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq = 42;
----
count
100


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq != 50;
----
count
9900


query
SELECT DISTINCT iq FROM vedernikoff_company WHERE iq > 95 ORDER BY iq;
----
iq
96
97
98
99
100


query
SELECT DISTINCT iq FROM vedernikoff_company WHERE iq < 5 ORDER BY iq;
----
iq
1
2
3
4


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq IN (1, 50, 100);
----
count
300


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq NOT IN (1, 50, 100);
----
count
9700


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq BETWEEN 10 AND 20;
----
count
1100


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq > 90 AND iq < 95;
----
count
400


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq > 50 OR iq < 3;
----
count
5200


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq > 95 AND salary IS NOT NULL;
----
count
500


query
SELECT COUNT(*) FROM vedernikoff_company WHERE iq > 95 AND salary IS NULL;
----
count
0


query
SELECT COUNT(*) FROM vedernikoff_company WHERE salary LIKE 'salary 1%';
----
count
1200


query
SELECT COUNT(*) FROM vedernikoff_company WHERE salary NOT LIKE 'salary 1%';
----
count
8800


query
SELECT COUNT(*) FROM vedernikoff_company WHERE fact LIKE '%gain%';
----
count
10000


query
SELECT COUNT(*) FROM vedernikoff_company WHERE fact NOT LIKE '%gain%';
----
count
0


statement count 15
COPY (
  SELECT
    CASE WHEN x % 3 = 0 THEN NULL ELSE x END as id,
    CASE WHEN x % 5 = 0 THEN NULL ELSE 'val_'::text || x::text END as name
  FROM generate_series(1, 15) as t(x)
) TO '/tmp/${__DATABASE__}_nullable_data.parquet';


statement ok
CREATE TABLE nullable_data(
  id INT8,
  name TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_nullable_data.parquet'
);


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NULL;
----
count
5


query
SELECT COUNT(*) FROM nullable_data WHERE name IS NULL;
----
count
3


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NOT NULL;
----
count
10


query
SELECT COUNT(*) FROM nullable_data WHERE name IS NOT NULL;
----
count
12


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NULL AND name IS NULL;
----
count
1


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NULL AND name IS NOT NULL;
----
count
4


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NOT NULL AND name IS NULL;
----
count
2


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NOT NULL AND name IS NOT NULL;
----
count
8


query
SELECT COUNT(*) FROM nullable_data WHERE id IS NULL OR name IS NULL;
----
count
7


query
SELECT COUNT(*) FROM nullable_data WHERE id > 10;
----
count
3


query
SELECT COUNT(*) FROM nullable_data WHERE id < 5;
----
count
3


query
SELECT COUNT(*) FROM nullable_data WHERE id >= 10;
----
count
4


query
SELECT COUNT(*) FROM nullable_data WHERE id <= 5;
----
count
4


query
SELECT COUNT(*) FROM nullable_data WHERE id != 7;
----
count
9


query
SELECT COUNT(*) FROM nullable_data WHERE id IN (1, 5, 10);
----
count
3


query
SELECT COUNT(*) FROM nullable_data WHERE id NOT IN (1, 5, 10);
----
count
7


query
SELECT COUNT(*) FROM nullable_data WHERE id > 5 AND name IS NOT NULL;
----
count
5


query
SELECT COUNT(*) FROM nullable_data WHERE id > 5 AND name IS NULL;
----
count
1


query
SELECT id, name FROM nullable_data WHERE id IS NULL ORDER BY name;
----
id	name
NULL	val_12
NULL	val_3
NULL	val_6
NULL	val_9
NULL	NULL


query
SELECT id, name FROM nullable_data WHERE name IS NULL ORDER BY id;
----
id	name
5	NULL
10	NULL
NULL	NULL


query
SELECT id, name FROM nullable_data WHERE id IS NOT NULL AND name IS NOT NULL ORDER BY id;
----
id	name
1	val_1
2	val_2
4	val_4
7	val_7
8	val_8
11	val_11
13	val_13
14	val_14


query
SELECT id, name FROM nullable_data WHERE id > 10 AND name IS NOT NULL ORDER BY id;
----
id	name
11	val_11
13	val_13
14	val_14


statement count 10000
COPY (
  SELECT 
    iq,
    'salary '::text || salary::text || ' dallar'::text as salary, 
    'i do nothing and gain money' as fact
  FROM
    generate_series(1, 100) as clickclack(iq),
    generate_series(1, 100) as serenedb(salary)
  ORDER BY iq, serenedb.salary
) TO '/tmp/${__DATABASE__}_vedernikoff_company.csv';


statement ok
CREATE TABLE malandin_company(
  iq INT8,
  salary TEXT,
  fact TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.csv'
);


query
SELECT salary, iq FROM malandin_company ORDER BY iq, salary LIMIT 1;
----
salary	iq
salary 1 dallar	1


query
SELECT fact FROM malandin_company LIMIT 12;
----
fact
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money
i do nothing and gain money


query
SELECT * FROM malandin_company WHERE iq = 10;
----
303 values hashing to 5600e63d5f8c31d485ae90f71818c6a3


query
SELECT iq FROM malandin_company WHERE iq = 10 LIMIT 1000 - 7;
----
101 values hashing to d205e693a80c0cd10ec6e7a312eaae99


query
SELECT * FROM
  malandin_company NATURAL JOIN
  vedernikoff_company;
----
30003 values hashing to 017114532d4bd6a929a5d709e1e8d90f


query
SELECT COUNT(*) FROM malandin_company WHERE iq IS NULL;
----
count
0


query
SELECT COUNT(*) FROM malandin_company WHERE iq IS NOT NULL;
----
count
10000


query
SELECT COUNT(*) FROM malandin_company WHERE salary IS NULL;
----
count
0


query
SELECT COUNT(*) FROM malandin_company WHERE salary IS NOT NULL;
----
count
10000


query
SELECT COUNT(*) FROM malandin_company WHERE iq > 95;
----
count
500


query
SELECT COUNT(*) FROM malandin_company WHERE iq < 5;
----
count
400


query
SELECT COUNT(*) FROM malandin_company WHERE iq >= 99;
----
count
200


query
SELECT COUNT(*) FROM malandin_company WHERE iq <= 2;
----
count
200


query
SELECT COUNT(*) FROM malandin_company WHERE iq = 42;
----
count
100


query
SELECT COUNT(*) FROM malandin_company WHERE iq != 50;
----
count
9900


query
SELECT DISTINCT iq FROM malandin_company WHERE iq > 95 ORDER BY iq;
----
iq
96
97
98
99
100


query
SELECT DISTINCT iq FROM malandin_company WHERE iq < 5 ORDER BY iq;
----
iq
1
2
3
4


query
SELECT COUNT(*) FROM malandin_company WHERE iq IN (1, 50, 100);
----
count
300


query
SELECT COUNT(*) FROM malandin_company WHERE iq NOT IN (1, 50, 100);
----
count
9700


query
SELECT COUNT(*) FROM malandin_company WHERE iq BETWEEN 10 AND 20;
----
count
1100


query
SELECT COUNT(*) FROM malandin_company WHERE iq > 90 AND iq < 95;
----
count
400


query
SELECT COUNT(*) FROM malandin_company WHERE iq > 50 OR iq < 3;
----
count
5200


query
SELECT COUNT(*) FROM malandin_company WHERE iq > 95 AND salary IS NOT NULL;
----
count
500


query
SELECT COUNT(*) FROM malandin_company WHERE iq > 95 AND salary IS NULL;
----
count
0


query
SELECT COUNT(*) FROM malandin_company WHERE salary LIKE 'salary 1%';
----
count
1200


query
SELECT COUNT(*) FROM malandin_company WHERE salary NOT LIKE 'salary 1%';
----
count
8800


query
SELECT COUNT(*) FROM malandin_company WHERE fact LIKE '%gain%';
----
count
10000


query
SELECT COUNT(*) FROM malandin_company WHERE fact NOT LIKE '%gain%';
----
count
0


statement count 15
COPY (
  SELECT
    CASE WHEN x % 3 = 0 THEN NULL ELSE x END as id,
    CASE WHEN x % 5 = 0 THEN NULL ELSE 'val_'::text || x::text END as name
  FROM generate_series(1, 15) as t(x)
) TO '/tmp/${__DATABASE__}_nullable_data.csv';


statement ok
CREATE TABLE clickclack(
  id INT8,
  name TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_nullable_data.csv'
);


query
SELECT COUNT(*) FROM clickclack WHERE id IS NULL;
----
count
5


query
SELECT COUNT(*) FROM clickclack WHERE name IS NULL;
----
count
3


query
SELECT COUNT(*) FROM clickclack WHERE id IS NOT NULL;
----
count
10


query
SELECT COUNT(*) FROM clickclack WHERE name IS NOT NULL;
----
count
12


query
SELECT COUNT(*) FROM clickclack WHERE id IS NULL AND name IS NULL;
----
count
1


query
SELECT COUNT(*) FROM clickclack WHERE id IS NULL AND name IS NOT NULL;
----
count
4


query
SELECT COUNT(*) FROM clickclack WHERE id IS NOT NULL AND name IS NULL;
----
count
2


query
SELECT COUNT(*) FROM clickclack WHERE id IS NOT NULL AND name IS NOT NULL;
----
count
8


query
SELECT COUNT(*) FROM clickclack WHERE id IS NULL OR name IS NULL;
----
count
7


query
SELECT COUNT(*) FROM clickclack WHERE id > 10;
----
count
3


query
SELECT COUNT(*) FROM clickclack WHERE id < 5;
----
count
3


query
SELECT COUNT(*) FROM clickclack WHERE id >= 10;
----
count
4


query
SELECT COUNT(*) FROM clickclack WHERE id <= 5;
----
count
4


query
SELECT COUNT(*) FROM clickclack WHERE id != 7;
----
count
9


query
SELECT COUNT(*) FROM clickclack WHERE id IN (1, 5, 10);
----
count
3


query
SELECT COUNT(*) FROM clickclack WHERE id NOT IN (1, 5, 10);
----
count
7


query
SELECT COUNT(*) FROM clickclack WHERE id > 5 AND name IS NOT NULL;
----
count
5


query
SELECT COUNT(*) FROM clickclack WHERE id > 5 AND name IS NULL;
----
count
1


query
SELECT id, name FROM clickclack WHERE id IS NULL ORDER BY name;
----
id	name
NULL	val_12
NULL	val_3
NULL	val_6
NULL	val_9
NULL	NULL


query
SELECT id, name FROM clickclack WHERE name IS NULL ORDER BY id;
----
id	name
5	NULL
10	NULL
NULL	NULL


query
SELECT id, name FROM clickclack WHERE id IS NOT NULL AND name IS NOT NULL ORDER BY id;
----
id	name
1	val_1
2	val_2
4	val_4
7	val_7
8	val_8
11	val_11
13	val_13
14	val_14


query
SELECT id, name FROM clickclack WHERE id > 10 AND name IS NOT NULL ORDER BY id;
----
id	name
11	val_11
13	val_13
14	val_14


query
SELECT name FROM clickclack WHERE id > 10 AND name IS NOT NULL ORDER BY name;
----
name
val_11
val_13
val_14


statement error
CREATE TABLE babsky(
  iq INT8 PRIMARY KEY,
  salary TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: primary keys are not supported for external tables


statement error
CREATE TABLE babsky(
  iq INT8,
  salary TEXT,
  PRIMARY KEY (iq)
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: primary keys are not supported for external tables


statement error
CREATE TABLE babsky(
  iq INT8,
  salary TEXT CHECK (iq > 0)
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: check constraints are not supported for external tables


statement error
CREATE TABLE babsky(
  iq INT8,
  salary TEXT,
  CHECK (iq > 0)
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: check constraints are not supported for external tables


statement error
CREATE TABLE babsky(
  iq INTEGER DEFAULT 42,
  salary TEXT
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: default values are not supported for external tables


statement error
CREATE TABLE babsky(
  iq INT8,
  doubled INT8 GENERATED ALWAYS AS (iq * 2) STORED
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff_company.parquet'
);
----
db error: ERROR: generated columns are not supported for external tables


# TODO(Pasha): re-enable when HELP output is stabilised. The refactor dropped the
# per-option / per-format tree for WITH(HELP) in favour of a short pointer to
# DuckDB's reader docs; the assertion below still reflects the new message
# shape so flipping the skipif off should not require further edits.
skipif serenedb # TODO(Pasha) better options support
skipif pg-wire-simple
statement error
CREATE TABLE babsky(
  iq INT8,
  salary TEXT
) WITH (
  HELP
);
----
db error: ERROR:
External (file-backed) table options:
  path (string, required) - file path; extension picks the reader (.parquet -> read_parquet, .csv/.tsv/.txt -> read_csv_auto, .json/.jsonl/.ndjson -> read_json_auto)
  Any other WITH option is forwarded verbatim to that reader; see DuckDB docs for per-reader options.
  Remote storage (s3://, https://, ...) authenticates via DuckDB's CREATE SECRET.


# parquet type casting: external table type differs from parquet physical type

statement ok
CREATE TABLE vedernikoff_src (weight INTEGER);

statement ok
INSERT INTO vedernikoff_src VALUES (1), (2)

statement ok
COPY vedernikoff_src TO '/tmp/${__DATABASE__}_vedernikoff.parquet' (FORMAT PARQUET);


# vedernikoff: same type (INT4 -> INT4)
statement ok
CREATE TABLE vedernikoff(
  weight INTEGER
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff.parquet'
);

query
SELECT * FROM vedernikoff;
----
weight
1
2


# fatter_vedernikoff: wider type (INT4 parquet -> INT8 external)
statement ok
CREATE TABLE fatter_vedernikoff(
  weight INT8
) WITH (
  PATH = '/tmp/${__DATABASE__}_vedernikoff.parquet'
);

query
SELECT * FROM fatter_vedernikoff;
----
weight
1
2
